@@ -1,7 +1,6 @@
 package org.robolectric.shadow.api;
 
 import org.robolectric.internal.IShadow;
-import org.robolectric.util.ReflectionHelpers;
 import org.robolectric.util.ReflectionHelpers.ClassParameter;
 
 public class Shadow {
@@ -11,7 +10,7 @@ public class Shadow {
   static {
     try {
       SHADOW_IMPL = Class.forName("org.robolectric.internal.bytecode.ShadowImpl")
-          .asSubclass(IShadow.class).newInstance();
+          .asSubclass(IShadow.class).getDeclaredConstructor().newInstance();
     } catch (Exception e) {
       throw new RuntimeException(e);
     }
